syntax = "proto3";

package space;

option go_package = "github.com/cubefs/inodedb/proto";

enum NodeRole {
    	NODE_ROLE_SINGLE = 0;
    	NODE_ROLE_SHARDSERVER = 1;
	NODE_ROLE_MASTER = 2;
	NODE_ROLE_ROUTER = 4;
}

enum NodeState {
    	NODE_STATE_UNKNOWN = 0;
    	NODE_STATE_ALIVE = 1;
    	NODE_STATE_SUSPECT = 2;
    	NODE_STATE_QUIT = 3;
}

message Node {
	uint32 id = 1;
    	string addr = 2;
    	uint32 grpc_port = 3;
	uint32 http_port = 4;
	NodeRole roles = 5;
	NodeState state = 6;
}

enum FieldType {
	BOOL = 0;
	INT = 1;
	FLOAT = 2;
	STRING = 3;
	EMBEDDING = 4;
}

message Embedding {
	repeated float elements = 1;
	string source = 2;
}

enum IndexOption {
	Null = 0;
	Indexed = 1;
	Fulltext = 2;
	Unique = 3;
}

message FieldMeta {	
	string name = 1;
	FieldType type = 2;
	IndexOption indexed = 3;
}

message Field {
	FieldMeta meta = 1;
	bytes value = 2;
}

message Document {
	repeated Field fields = 1;
}

message Item {
	uint64 ino = 1;
	Document doc = 2;
}

message Link {
	uint64 parent = 1;
	string name = 2;
	uint64 child = 3;
}

message InoRange {
	uint64 start_ino = 1;
	uint64 end_ino = 2;
}

message SpaceMeta {
	string name = 1;
	uint64 id = 2;
	repeated FieldMeta fixed_fields = 3;
	repeated InoRange shards = 4;
}

service Space {
	rpc CreateSpace (CreateSpaceRequest) returns (CreateSpaceResponse) {}
	rpc DeleteSpace (DeleteSpaceRequest) returns (DeleteSpaceResponse) {}
	rpc GetSpace (GetSpaceRequest) returns (GetSpaceResponse) {}

	rpc CreateShard (CreateShardRequest) returns (CreateShardResponse) {}
	rpc DeleteShard (DeleteShardRequest) returns (DeleteShardResponse) {}
	
	rpc AddItem (AddItemRequest) returns (AddItemResponse) {}
    	rpc DelItem (DelItemRequest) returns (DelItemResponse) {}
	rpc GetItem (GetItemRequest) returns (GetItemResponse) {}
	
	rpc Link (LinkRequest) returns (LinkResponse) {}
	rpc Unlink (UnlinkRequest) returns (UnlinkResponse) {}

    	rpc Search (SearchRequest) returns (SearchResponse) {}
	rpc Metrics (MetricsRequest) returns (MetricsResponse) {}

    	rpc Cluster (ClusterRequest) returns (ClusterResponse) {}
}

message ClusterRequest { 
	string operation = 1;	//Join, Quit, et al.
	Node node_info = 2;
}

message ClusterResponse { }

message CreateSpaceRequest {
	SpaceMeta config = 1;
}

message CreateSpaceResponse { }

message DeleteSpaceRequest {
	string name = 1;
}

message DeleteSpaceResponse { }

message GetSpaceRequest {
	string name = 1;
}

message GetSpaceResponse {
	SpaceMeta info = 1;
}

message MetricsRequest {
	string keys = 1;
}

message MetricsResponse {
	bytes metrics = 1;
}

message ShardName {
    	string space_name = 1 [json_name="space_name"];
    	InoRange shard_id = 2 [json_name="shard_id"];
}

message CreateShardRequest {
	ShardName name = 1;
}

message CreateShardResponse {
}

message DeleteShardRequest {
	ShardName name = 1;
}

message DeleteShardResponse {
}

message AddItemRequest {
	ShardName name = 1;
	Document doc = 2;
}

message AddItemResponse {
	uint64 ino = 1;
}

message DelItemRequest {
	ShardName name = 1;
	uint64 ino = 2;
}

message DelItemResponse {
}

message GetItemRequest {
	ShardName name = 1;
	uint64 ino = 2;
}

message GetItemResponse {
	Item item = 1;
}

message LinkRequest {
	ShardName name = 1; 
	Link link = 2;
}

message LinkResponse { }

message UnlinkRequest {
	ShardName name = 1;
	Link link = 2;
}

message UnlinkResponse { }


message Query { }

message HighlightRequest { }

message SearchRequest {
    string space_name = 1 [json_name="space_name"];
    Query query = 2;
    int32 count = 3;
    string sorted_by = 4[json_name="sorted_by"];
    repeated string fields = 5;
}

message SearchResponse {
    uint64 hits = 1;
    repeated Item items = 2;
}
